Fix workflows missing permissions to write to the repository

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,6 +8,9 @@ on:
       - 'www/mine.html'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 concurrency:
   group: deploy-docs
   cancel-in-progress: false
